--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -2257,7 +2257,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"unlock": {
- 	 	 	 	"trans": "터놓다",
+ 	 	 	 	"trans": "열다",
  	 	 	 	"eng": "Unlock"
  	 	 	}
  	 	}
